--- a/pages/home.html
+++ b/pages/home.html
@@ -38,7 +38,7 @@
 
     <script>
         function toSearch() {
-            window.location.href = "search.html";
+            window.location.href = "search";
         }
     </script>
     <script src="../js/main.js"></script>
